@@ -5,10 +5,16 @@ import org.junit.jupiter.api.Test;
 import ru.yandex.javacourse.schedule.tasks.Task;
 import ru.yandex.javacourse.schedule.tasks.TaskStatus;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
+import java.util.Optional;
 
-public class InMemoryTaskManagerTest {
+import static org.junit.jupiter.api.Assertions.*;
+
+public class InMemoryTaskManagerTest extends TaskManagerTest<TaskManager> {
+
+    @Override
+    protected TaskManager createManager() {
+        return Managers.getDefault();
+    }
 
     TaskManager manager;
 
@@ -24,47 +30,47 @@ public class InMemoryTaskManagerTest {
 
         assertEquals(1, manager.getTasks().size(), "task should be added");
 
-        Task addedTask = manager.getTasks().get(0);
+        Task addedTask = manager.getTasks().getFirst();
         assertEquals(id, addedTask.getId());
         assertEquals("Test 1", addedTask.getName());
         assertEquals("Testing task 1", addedTask.getDescription());
         assertEquals(TaskStatus.NEW, addedTask.getStatus());
 
-        Task byIdTask = manager.getTask(id);
-        assertEquals(id, byIdTask.getId());
-        assertEquals("Test 1", byIdTask.getName());
+        Optional<Task> byIdTask = manager.getTask(id);
+        assertTrue(byIdTask.isPresent(), "task should be retrievable by id");
+        assertEquals(id, byIdTask.get().getId());
+        assertEquals("Test 1", byIdTask.get().getName());
     }
 
+
     @Test
-    public void testAddTaskWithId(){
+    public void testAddTaskWithId() {
         Task task = new Task(42, "Test 1", "Testing task 1", TaskStatus.NEW);
         int returnedId = manager.addNewTask(task);
 
         assertEquals(1, manager.getTasks().size(), "task should be added");
-        Task addedTask = manager.getTasks().get(0);
-        assertEquals(task, addedTask, "predefined task should be stored");
-        assertEquals(42, returnedId, "returned id should equal predefined id");
-        assertEquals(42, task.getId(), "predefined id should be kept");
+        Task addedTask = manager.getTasks().getFirst();
+
+        assertEquals("Test 1", addedTask.getName());
+        assertEquals("Testing task 1", addedTask.getDescription());
+        assertEquals(TaskStatus.NEW, addedTask.getStatus());
+        assertNotEquals(42, returnedId, "менеджер не должен сохранять внешний id");
+        assertNotEquals(42, addedTask.getId(), "менеджер сам генерирует id");
     }
 
     @Test
-    public void testAddTaskWithAndWithoutId(){
+    public void testAddTaskWithAndWithoutId() {
         Task task0 = new Task("Test 1", "Testing task 1", TaskStatus.NEW);
         int id0 = manager.addNewTask(task0);
-        assertEquals(1, id0);
 
         Task task1 = new Task(1, "Test 2", "Testing task 2", TaskStatus.NEW);
         int id1 = manager.addNewTask(task1);
-        assertEquals(1, id1);
 
-        assertEquals(1, manager.getTasks().size(), "should be a single record with id=1 after update strategy");
-        Task stored = manager.getTask(1);
-        assertNotNull(stored, "task with id=1 must exist");
-        assertEquals("Test 2", stored.getName(), "record with id=1 should be updated to second task");
-
-        assertEquals(1, id0, "first returned id should be 1");
-        assertEquals(1, id1, "second returned id should be 1 as well");
+        assertEquals(2, manager.getTasks().size(), "должны быть две разные задачи");
+        assertEquals(1, task1.getId(), "внешний id остался прежним");
+        assertNotEquals(1, id1, "менеджер должен выдать новый уникальный id");
     }
+
 
     @Test
     public void checkTaskNotChangedAfterAddTask() {
@@ -76,12 +82,15 @@ public class InMemoryTaskManagerTest {
         Task task1before = new Task(id, name, description, status);
         manager.addNewTask(task1before);
 
-        Task task1after = manager.getTask(task1before.getId());
-        assertNotNull(task1after, "task should be found by id");
+        Optional<Task> taskOpt = manager.getTask(task1before.getId());
+        assertTrue(taskOpt.isPresent(), "task should be found by id");
+
+        Task task1after = taskOpt.get();
         assertEquals(id, task1after.getId());
         assertEquals(description, task1after.getDescription());
         assertEquals(status, task1after.getStatus());
         assertEquals(name, task1after.getName());
     }
+
 }
 
